--- a/Pipfile
+++ b/Pipfile
@@ -8,36 +8,27 @@ name = "pypi"
 Flask = "==1.1.1"
 Werkzeug = "==0.16.0"
 click = ">=5.0"
-
 # Database
 Flask-SQLAlchemy = "==2.4.1"
 SQLAlchemy = "==1.3.9"
-
 # Migrations
 Flask-Migrate = "==2.5.2"
-
 # Forms
 Flask-WTF = "==0.14.2"
 WTForms = "==2.2.1"
-
 # Deployment
 gevent = "==1.4.0"
 gunicorn = ">=19.1.1"
 supervisor = "==4.0.4"
-
 # Webpack
 flask-webpack = "==0.1.0"
-
 # Auth
 Flask-Login = "==0.4.1"
 Flask-Bcrypt = "==0.7.1"
-
 # Caching
 Flask-Caching = ">=1.0.0"
-
 # Debug toolbar
 Flask-DebugToolbar = "==0.10.1"
-
 # Environment variable parsing
 environs = "==6.0.0"
 
@@ -47,7 +38,6 @@ pytest = "==5.2.0"
 WebTest = "==2.0.33"
 factory-boy = "==2.12.*"
 pdbpp = "==0.10.2"
-
 # Lint and code style
 black = "==19.3b0"
 flake8 = "==3.7.8"
@@ -57,3 +47,4 @@ flake8-docstrings = "==1.5.0"
 flake8-isort = "==2.7.0"
 isort = "==4.3.21"
 pep8-naming = "==0.8.2"
+faker = "*"
