Integrates flask-mail into app

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,10 @@ DATABASE_URL=sqlite:////tmp/dev.db
 GUNICORN_WORKERS=1
 LOG_LEVEL=debug
 SECRET_KEY=not-so-secret
+
+MAIL_USERNAME='your_email@example.com'
+MAIL_DEFAULT_SENDER='default_email@example.com'
+MAIL_PASSWORD='something'
+MAIL_SERVER='smtp@example.com'
+MAIL_PORT=587
+MAIL_USE_SSL=True
