Adds `MAIL_SUPPRESS_SEND` to settings.py
This implicitly turns the mailing behavior off for local development

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,4 @@ MAIL_PASSWORD='something'
 MAIL_SERVER='smtp@example.com'
 MAIL_PORT=587
 MAIL_USE_SSL=True
+MAIL_SUPPRESS_SEND=False  # True if you want to mute the sending of emails
