--- a/Pipfile
+++ b/Pipfile
@@ -32,6 +32,7 @@ Flask-DebugToolbar = "==0.10.1"
 # Environment variable parsing
 environs = "==6.0.0"
 flask-mail = "*"
+python-dateutils = "*"
 
 [dev-packages]
 # Testing
