--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ GUNICORN_WORKERS=1
 LOG_LEVEL=debug
 SECRET_KEY=not-so-secret
 
+FLASK_ADMIN=someemail@example.com
+
+# SMTP Mail Settings
 MAIL_USERNAME='your_email@example.com'
 MAIL_DEFAULT_SENDER='default_email@example.com'
 MAIL_PASSWORD='something'
@@ -14,3 +17,17 @@ MAIL_SERVER='smtp@example.com'
 MAIL_PORT=587
 MAIL_USE_SSL=True
 MAIL_SUPPRESS_SEND=False  # True if you want to mute the sending of emails
+
+# -- OR --
+
+# MailGun Mailer Settings
+MAILGUN_API_KEY=somekey
+MAILGUN_DOMAIN=yourdomain@domain.org
+MAILGUN_PUBLIC_KEY=somepublickey
+MAILGUN_SMTP_LOGIN=somelogin
+MAILGUN_SMTP_PASSWORD=password
+MAILGUN_SMTP_PORT=587
+MAILGUN_SMTP_SERVER=smtp.mailgun.org
+
+CURRENT_SENIORITY_LIST_CSV=/home/path/to/your/data
+CURRENT_SENIORITY_LIST_PUBLISHED="2020-01-01"
